# zaniewss-repo

./: README.md  html5snippet.txt  index.html
UNFINISHED - Text RPG/: Character.py  Spell.py  backstory.py  main.py  print stats copypaste  pyproject.toml
UNFINISHED - Text RPG/StoryPaths/: clericpath.py  knightpath.py  noblepath.py  peasantpath.py  roguepath.py  wizardpath.py
activity-1/: index.html
activity-2/: index.html
activity-3/: index.html  stylesheet.css
activity-4/: index.html
activity-4/css/: master.css
activity-4/js/: scripts.js
activity-5/: index.html
activity-5/css/: master.css
activity-5/js/: scripts.js
activity-6/: index.html
activity-6/css/: styles.css
activity-6/js/: scripts.js
activity-7/: index.html
activity-7/css/: styles.css
activity-7/js/: scripts.js
activity-8/: index.html
activity-8/css/: styles.css
activity-8/js/: scripts.js
samuel-zaniewski-p1/: index.html  script.js  style.css
samuel-zaniewski-p2/: index.html  randomname.html
samuel-zaniewski-p2/css/: styles.css
samuel-zaniewski-p2/js/: scriptsName.js
