[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Samuel Zaniewski <sam.zaniewski@gmail.com>", "Jack Zaniewski <jack.zaniewski@gmail.com>"]
description = "A text based RPG game with a bunch of different story lines"
name = "Zanis-text-based-rpg"
version = "0.0.2"
[tool.poetry.dependencies]
colorama = "^0.4.3"
python = "^3.8"
[tool.poetry.dev-dependencies]
